# SHL-Assessment-Recommendation-Engine

./: README.md
backend/: .gitignore  README.md  config.json  eval_results.txt  main.py  modal_app.py  pyproject.toml
backend/app/constants/: strings.py
backend/app/evaluation/: __init__.py  eval_reranker.py  eval_retriever.py  evaluator.py  test_set_recommendation.py
backend/app/pydantic_models/: data_model.py
backend/app/services/api/: main.py
backend/app/services/api/routes/: recommend.py
backend/app/services/balancer/: balancer.py
backend/app/services/embedder/: factory.py  google_embedder.py
backend/app/services/ingester/: data_ingester.py
backend/app/services/llm/: __init__.py  factory.py  google_llm.py  groq_llm.py
backend/app/services/query/: query_transformer.py
backend/app/services/recommender/: recommender.py
backend/app/services/reranker/: base_reranker.py  cohere_reranker.py  factory.py  llm_reranker.py  pinecone_reranker.py
backend/app/services/retriever/: factory.py  mmr_retriever.py  vanila_retriever.py
backend/app/services/scraper/: assessment_scraper.py  base_scraper.py  catalogue_scraper.py
backend/app/services/text_splitter/: character_splitter.py  factory.py  recursive_splitter.py  token_splitter.py
backend/app/services/vector_store/: factory.py  pinecone_vector_store.py
backend/app/utils/: config.py  envs.py
frontend/: .env_example  README.md  index.html  tailwind.config.js
frontend/src/: App.jsx  index.css
