[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bs4>=0.0.2",
    "langchain[google-genai]>=1.2.0",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.1.1",
    "langchain-text-splitters>=1.1.0",
    "pydantic>=2.12.5",
    "langchain-pinecone>=0.2.13",
    "langchain-groq>=1.1.1",
    "langchain-cohere>=0.5.0",
    "fastapi[standard]>=0.125.0",
    "pandas>=2.3.3",
    "openpyxl>=3.1.5",
    "faiss-cpu>=1.13.1",
    "modal>=1.3.0.post1",
]
